k8s/app.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "demo-tdc"
  labels:
    name: "demo-tdc"
    istio-injection: "enabled"
---

apiVersion: "v1"
kind: Pod
metadata:
  name: tdc-app
  namespace: demo-tdc
  labels:
    name: tdc-app
    app: tdc-app
spec:
  containers:
    - name: redis
      image: redis
      ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
    - name: python
      image: talits/demo-tdc
      ports:
        - containerPort: 8000
          name: http
          protocol: TCP
