k8s/db-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: mysql
  namespace: demo-tdc
  labels:
    name: mysql
    app: demo
spec:
  containers:
    - name: mysql
      image: mysql:5.7.25
      ports:
        - containerPort: 3306         
          protocol: TCP
