k8s/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tdc-app
  namespace: demo-tdc
  labels:
    name: tdc-app
    app: tdc-app
    version: v1
spec:
  selector:
    name: tdc-app
  type: NodePort
  ports:
   - port: 80
     name: http
     targetPort: 8000
     protocol: TCP
