k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: demo-tdc
  labels:
    name: mysql
    app: demo  
spec:
  ports:
  - port: 3306
    name: mysql
    targetPort: 3306
  selector:
    name: mysql
    app: demo
