k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-tdc
  namespace: demo-tdc
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8000
      name: http
      protocol: HTTP
    hosts:
    - "tdc-app.demo-tdc.svc.cluster.local"
