k8s/virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-tdc
  namespace: demo-tdc
spec:
  hosts:
  - "*"
  gateways:
  - demo-tdc
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tdc-app.demo-tdc.svc.cluster.local
